--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Informações do Dispositivo</title>
+    <title>GetData</title>
 </head>
 <body>
     <div id="info"></div>
